kustomize/overlays/scots-lab/apps/guacamole/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-postgresql
  namespace: guacamole
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-postgresql
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      priorityClassName: homelab-data
      containers:
        - name: postgresql
          image: postgres:16-alpine
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: guacamole-db-pvc
