kustomize/overlays/scots-lab/apps/guacamole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guacamole
  namespace: guacamole
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Guacamole"
    gethomepage.dev/description: "Remote Desktop"
    gethomepage.dev/group: "Services"
    gethomepage.dev/icon: "guacamole.png"
    gethomepage.dev/href: "https://guacamole.srbii.com"
spec:
  parentRefs:
    - name: kgateway-http
      namespace: kgateway-system
  hostnames:
    - "guacamole.srbii.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: guacamole
          port: 8080
